[package]
name = "flame_rs"
version = "1.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
random_choice = "0.3.2"
indicatif = "0.17.2"
rayon = "1.6.1"
thousands = "0.2.0"
clap = { version = "4.0.32", features = ["cargo"] }
config = "0.13.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 2
