[package]
name = "flame_rs"
version = "1.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
random_choice = "0.3.2"
indicatif = "0.17.7"
rayon = "1.8.1"
thousands = "0.2.0"
clap = { version = "4.4.18", features = ["cargo"] }
config = "0.13.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
